2017-09-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallRequest): Fix
	up usage of new PRIxREG.
	* targets/common/RegisterSizes.h (PRIuREG): Changed to...
	(PRIxREG): ...this.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.ac: Make -with-wall the default, turning on -Wall.
	* configure: Regenerate.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* targets/common/RegisterSizes.h (PRIuREG): Define base on whether
	we're doing 32 or 64 bit build.
	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallRequest):
	Make use of PRIuREG format specifier.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallReply): Don't
	compare unsigned variable with signed immediate.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/RspPacket.cpp (RspPacket::packStr): Change type of some
	locals.
	(RspPacket::packHexstr): Likewise.
	(RspPacket::packRcmdStr): Likewise.
	* server/RspPacket.h (bufSize): Change type.
	(len): Likewise.
	* server/GdbServerImpl.cpp (GdbServerImpl::rspWriteAllRegs):
	Change type of some locals.
	(GdbServerImpl::rspWriteReg): Likewise.
	(GdbServerImpl::rspWriteMemBin): Likewise, also update sscanf
	format to match.
	(GdbServerImpl::rspWriteMemBin): Change type of some locals.
	(GdbServerImpl::rspRemoveMatchpoint): Likewise.
	(GdbServerImpl::rspInsertMatchpoint): Likewise.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/main.cpp (main): Remove 'flags' and 'silent', unused
	variables.
	* server/GdbServerImpl.cpp (GdbServerImpl::rspClientRequest):
	Remove 'timeout_start', unused variable.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.ac: Add new options to enable or disable Wall, Wextra,
	and Werror compiler flags.
	* configure: Regenerate.

2017-10-19  Andrew Burgess  <andrew.burgess@embecosm.com>
